iptables-with-transmission-forwarding.rules
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Sep  1 03:36:19 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -j ts-forward
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.96.147.23/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
COMMIT
# Completed on Fri Sep  1 03:36:19 2023
# Generated by iptables-save v1.8.9 (nf_tables) on Fri Sep  1 03:36:19 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ts-postrouting - [0:0]
-A OUTPUT -d 127.0.0.0/8 -p tcp -m addrtype --src-type LOCAL --dst-type LOCAL -m tcp --dport 9091 -j DNAT --to-destination 192.168.65.66
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -o veth-pia0 -m addrtype --src-type LOCAL --dst-type UNICAST -j MASQUERADE
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Fri Sep  1 03:36:19 2023
